# mania

./: .envrc  .gitignore  .justfile  Cargo.toml  README.md  dprint.json  flake.nix  rust-toolchain.toml  treefmt.nix  typos.toml
.github/: dependabot.yml
.github/workflows/: check.yml
examples/: Cargo.toml  multi_login.rs
mania/: Cargo.toml  build.rs
mania-codec/: Cargo.toml  README.md
mania-codec/src/audio/encoder/: silk_encoder.rs
mania-macros/: Cargo.toml
mania-macros/src/: lib.rs
mania/src/core/: context.rs  crypto.rs  event.rs  highway.rs  packet.rs  ping.rs  sign.rs  tlv.rs
mania/src/core/crypto/: ecdh.rs  stream_sha1.rs  tea.rs  tri_sha1.rs
mania/src/core/event/login/: trans_emp.rs
mania/src/core/event/message/: file_group_download.rs  image_c2c_upload.rs  image_group_upload.rs  push_msg.rs  record_c2c_upload.rs  record_group_upload.rs  video_c2c_upload.rs  video_group_upload.rs
mania/src/core/event/system/: info_sync.rs
mania/src/core/highway/: hw_client.rs  hw_frame_codec.rs
mania/src/core/operation/: highway_op.rs  wt_op.rs
mania/src/core/protos/: README.MD
mania/src/core/sign/: linux.rs
mania/src/core/tlv/: t106.rs
mania/src/entity/: bot_friend.rs  sys_face.rs
mania/src/message/: chain.rs  entity.rs  packer.rs
mania/src/message/entity/: file.rs  image.rs  market_face.rs  record.rs  video.rs
mania/src/utility/: extensions.rs  image_gen.rs  mod.rs  random_gen.rs
