[workspace]
resolver = "2"
members = ["mania", "mania-macros", "mania-codec", "examples"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "LICENCE"
readme = "README.md"

[workspace.dependencies]
md-5 = "0.11.0-pre.4"
hex = "0.4.3"
tracing = "0.1.41"
tokio = { version = "1.43.0", features = [
  "fs",
  "net",
  "io-util",
  "time",
  "macros",
  "rt-multi-thread",
  "signal",
  "tracing",
] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
thiserror = "2.0.11"
num_enum = "0.7.3"
bytes = { version = "1.10.0", features = ["serde"] }

[profile.release]
opt-level = 2
debug = true
lto = true
incremental = false
codegen-units = 1
strip = true
