[workspace]
resolver = "2"
members = ["mania", "mania-macros", "mania-codec", "examples"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "LICENCE"
readme = "README.md"

[workspace.dependencies]
md-5 = "0.11.0-rc.0"
hex = "0.4.3"
tracing = "0.1.41"
tokio = { version = "1.45.1", features = [
  "fs",
  "net",
  "io-util",
  "time",
  "macros",
  "rt-multi-thread",
  "signal",
  "tracing",
] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
thiserror = "2.0.12"
num_enum = "0.7.3"
bytes = { version = "1.10.1", features = ["serde"] }

[profile.release]
opt-level = 2
debug = true
lto = true
incremental = false
codegen-units = 1
strip = true
