[package]
name = "mania-examples"
description = "examples for mania"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
mania = { path = "../mania" }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }
tokio.workspace = true
cfg-if = "1.0.0"

[features]
default = []
tokio-tracing = ["console-subscriber"]

[[example]]
name = "multi-login"
path = "./multi-login.rs"
