[package]
name = "mania-examples"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "examples for mania"

[dependencies]
cfg-if = "1.0.1"
console-subscriber = { version = "0.4.1", optional = true }
mania = { path = "../mania" }
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid.workspace = true

[features]
default = []
tokio-tracing = ["console-subscriber"]

[[example]]
name = "mania_multi_login"
path = "multi_login.rs"
