[package]
name = "mania-codec"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"

[dependencies]
num-traits = "0.2.19"
rubato = "0.16.1"
silk-sys = "0.1.0"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
  "all",
] }
thiserror.workspace = true
num_enum.workspace = true
bytes.workspace = true
