[package]
name = "mania"
license-file.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mania-macros = { path = "../mania-macros" }
mania-codec = { path = "../mania-codec" }
arc-swap = { version = "1.7.1", features = ["serde"] }
block-buffer = { version = "=0.11.0-rc.3" }                  # FIXME: This is a temporary solution, See: https://github.com/cot-rs/cot/issues/196
byteorder = "1.5.0"
bytes.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
flate2 = "1.1.0"
generic-array = "1.2.0"
phf = { version = "0.11.3", features = ["macros"] }
prost = "0.13.5"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
surge-ping = "0.8.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
reqwest = "0.12.12"
serde_json = "1.0.139"
futures = "0.3.31"
inventory = "0.3.19"
once_cell = "1.20.2"
p256 = { version = "0.13.2", features = ["ecdh"] }
md-5.workspace = true
elliptic-curve = "0.13.8"
log = "0.4.26"
rand_chacha = "0.3.1"
num_enum.workspace = true
quick-xml = { version = "0.37.2", features = ["serialize"] }
regex = "1.11.1"
tokio-util = "0.7.13"
sha1 = "0.11.0-pre.4"
digest = "0.11.0-pre.9"
image = "0.25.5"
noise = "0.9.0"

[build-dependencies]
prost-build = "0.13.4"
glob = "0.3.2"
anyhow = "1.0.96"
